--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Copy local.properties.example to local.properties
+      run: cp local.properties.example local.properties
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
